[package]
name = "mini2react"
version = "0.1.1"
edition = "2021"
description = "Mini components to react components."
license = "MIT"
readme = "README.md"
repository = "https://github.com/iamwjun/mini2react/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
