[package]
name = "mini2react"
version = "0.1.1"
edition = "2021"
description = "Mini components to react components."
license = "MIT"
readme = "README.md"
repository = "https://github.com/iamwjun/mini2react/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.0"
markup5ever_rcdom = "0.1.0"
regex = "1.11.1"
serde_json = "1.0.140"
